--- a/Review_Numpy.ipynb
+++ b/Review_Numpy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": " Review_Numpy.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMmPWW88CtoLqAQ6tx7ubzH",
+      "authorship_tag": "ABX9TyPG2muhdrcW6Zjj9up9LVcI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,43 +28,48 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "n5BpNZX93UHA",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 171
-        },
-        "outputId": "e4f8b093-e2b5-4c8a-a151-f54b2237d6df"
-      },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-a1858e4e55a3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msdfwfwfwefffww\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'sdfwfwfwefffww' is not defined"
-          ]
-        }
-      ],
+      "cell_type": "markdown",
       "source": [
-        "sdfwfwfwefffww"
-      ]
+        "# Numpy จะคล้ายๆกับ list แต่ numpy เร็วและใช้งานหลากหลายมากกว่า "
+      ],
+      "metadata": {
+        "id": "rQyNFKtJBxTr"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "print(\"Hello\")\n",
+        "a = ['a', 'b', 'c', 1, 2]\n",
+        "a"
       ],
       "metadata": {
-        "id": "eg7-AFX840nr"
+        "id": "W09yHf6WBxYs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "475277af-a610-44d3-a004-beca002607bd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', 'b', 'c', 1, 2]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     }
   ]
 }
